README, JWT, DB

--- a/LinguaCorp.API/appsettings.Development.json
+++ b/LinguaCorp.API/appsettings.Development.json
@@ -5,7 +5,17 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "ApiSettings": {
-    "ApiKey": "SecretAPIKey"
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=Data/linguacorp.db"
+  },
+  "JwtSettings": {
+    "SecretKey": "SuperSecretKeyForJwtTokenGeneration12345!",
+    "Issuer": "LinguaCorpAPI",
+    "Audience": "LinguaCorpClients",
+    "ExpirationHours": 24
+  },
+  "AdminCredentials": {
+    "Username": "admin",
+    "Password": "admin"
   }
 }
