--- a/LinguaCorp.API/appsettings.json
+++ b/LinguaCorp.API/appsettings.json
@@ -6,7 +6,17 @@
     }
   },
   "AllowedHosts": "*",
-  "ApiSettings": {
-    "ApiKey": "SecretAPIKey"
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=/tmp/linguacorp.db"
+  },
+  "JwtSettings": {
+    "SecretKey": "SuperSecretKeyForJwtTokenGeneration12345!",
+    "Issuer": "LinguaCorpAPI",
+    "Audience": "LinguaCorpClients",
+    "ExpirationHours": 24
+  },
+  "AdminCredentials": {
+    "Username": "admin",
+    "Password": "admin"
   }
 }
